# shuttle-piping

./: .dockerignore  .gitignore  10GB_SOLUTION.md  CAPACITY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  LICENSE  QUICK_PUSH.sh  QUICK_REFERENCE.md  README.md  README_CN.md  README_PUSH.txt  ZERO_COPY_ARCHITECTURE.md  compare_architectures.sh  push_to_github.sh  switch_architecture.sh  test_examples.sh  test_transfer.sh  tune_capacity.sh
.github/workflows/: build-linux.yml  gitops-image-update.yml  release.yml
.shuttle/: config.toml
deploy/argocd/: application.yaml
deploy/k8s/: deployment.yaml  namespace.yaml  service.yaml
deploy/systemd/: axum-piping.service
docs/superpowers/plans/: 2026-05-02-web-text-transfer.md
docs/superpowers/specs/: 2026-05-02-text-transfer-design.md
scripts/: deploy_racknerd.sh
src/: main.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
