[package]
name = "axum-piping"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-stream = "0.3"
serde_json = "1.0.134"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "clock"] }
include_dir = "0.7"
mime_guess = "2.0"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
